# debug-python-gha

./: CMakeLists.txt
.github/workflows/: test_mac.yml  test_windows.yml
cmake/: PythonGetLibAndLinkUp.cmake
